--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,13 @@
     <string name="login_textField_password">Password</string>
     <string name="login_btn">Log in</string>
     <string name="menu">Menu</string>
+
+
+    <string name="see_profile">See profile</string>
+    <string name="report_user">Report user</string>
+    <string name="block_user">Block user</string>
+
+
     <string name="save_profile_data_btn">Save</string>
 
 
