Refactor: FCM token management, notification handling, and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
 
     <string name="no_authenticated_user">There is no authenticated user</string>
 
+
+    <string name="default_notification_channel_id">New Message!!</string>
+
 </resources>
